WeeChat ChangeLog
=================
FlashCode <flashcode@flashtux.org>
v0.3.2-dev, 2010-03-25


Version 0.3.2 (under dev!)
--------------------------

* core: add new options for command /key: listdefault, listdiff and reset
* core: add new command /mute
* core: add signal "day_changed"
* core: add command line option "-s" (or "--no-script") to start WeeChat
  without loading any script
* core: remove unneeded space after time on each line if option
  weechat.look.buffer_time_format is set to empty value (bug #28751)
* core: add option "switch_active_buffer_previous" for command /input
  (task #10141)
* core: add new option weechat.look.time_format to customize default format
  for date/time displayed (localized date by default), add function
  weechat_util_get_time_string in plugin API (patch #6914)
* core: add new option weechat.look.command_chars, add functions
  string_is_command_char and string_input_for_buffer in plugin and script API
* core: add new option weechat.look.read_marker_always_show
* core: use arguments for infolist "nicklist" to return only one nick or group
* gui: refresh screen when exiting WeeChat (to display messages printed after
  /quit)
* gui: fix bug with global history, reset pointer to last entry after each user
  input (bug #28754)
* gui: fix bug with bar background after text with background color (bug #28157)
* gui: fix bug with cursor when position is last char of terminal
* api: add "version_number" for function info_get to get WeeChat version as
  number
* api: add "irc_is_nick" for function info_get to check if a string is a valid
  IRC nick name (patch #7133)
* api: add functions "string_encode_base64" and "string_decode_base64", fix
  bug with base64 encoding
* api: add functions "string_match", "string_has_highlight" and
  "string_mask_to_regex" in script plugin API
* api: add missing infos in functions buffer_get_integer / buffer_get_string
  and in buffer infolist